---------------------------------------------------------------------------------------------------
Version: 18.0.4
Date: 2020-04-02
  Features:
  Changes:
  Bugfixes:
    - react to script_revive_event - as construction drones now use this to build things.
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.0.3
Date: 2020-02-29
  Features:
  Changes:
  Bugfixes:
    - fix robots deconstructing undergrounds not triggering correctly
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.0.2
Date: 2020-02-29
  Features:
    - added command to refresh the underground belt tiles record to fix after any mod compatibility issues.
    - added command to render a debug layer showing tiles marked as undergrounds.
  Changes:
  Bugfixes:
    - handles script_destroyed_event correctly - works with construction drones mod.
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.0.1
Date: 2020-02-22
  Features:
    - When the mod is added to an existing save, upon first underground belt route being made or removed will check all the surfaces and purifies any existing offending underground belts.
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.0.0
Date: 2020-02-21
  Features:
    - Initial Release
    - Mod only works on newly placed belts.
  Changes:
  Bugfixes:
  Info: